# PE-File-Format-CLI-

./: .gitignore  README.md  pyproject.toml
pecli/: __init__.py  main.py
pecli/analysis/: entropy.py  heuristics.py
pecli/cli/: headers.py  imports.py  info.py  scan.py  sections.py
pecli/core/: analyzer.py  context.py
pecli/pe/: dos.py  headers.py  imports.py  sections.py
pecli/utils/: reader.py
