[project]
name = "pecli"
version = "0.1.0"
description = "A powerful CLI for PE file analysis and malware heuristics"
authors = [
    { name = "Antigravity", email = "antigravity@google.com" }
]
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
    "pefile>=2023.2.7",
]
requires-python = ">=3.10"

[project.scripts]
pecli = "pecli.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
